--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="IMAGENS/fivecon_1.1.png.png">
-    <title>AXIS | Integration</title>
+    <title>AXIS</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -107,3 +107,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
